samples/_failures_safe/1761204588_2d6eea_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_42423468.c: In function ‘main’:
./samples/SAFE/__tmp_42423468.c:136:9: error: expected declaration or statement at end of input
  136 |         if (parse_log_line(line, &entry)) {
      |         ^~
./samples/SAFE/__tmp_42423468.c:136:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_42423468.c:136:9: error: expected declaration or statement at end of input
